# magiskhideX

./: README.md  action.sh  build.sh  customize.sh  gitignore  module.prop  post-fs-data.sh  service.sh
.github/workflows/: build.yml  release.yml
jni/: Application.mk  CMakeLists.txt  main.cpp
